fix: do not create map if resource is null